# debian-parsers

./: Cargo.toml  README.md
.github/workflows/: fuzz.yml  publish.yml  rust.yml
apt-sources/: Cargo.toml
apt-sources/fuzz/fuzz_targets/: parse_sources.rs
apt-sources/src/: legacy.rs  lib.rs  sources_manager.rs
deb822-derive/: README.md
deb822-edit/: Cargo.toml  README.md
deb822-edit/bench/: bench_lossless.rs  bench_lossy.rs
deb822-edit/examples/: error_recovery.rs
deb822-edit/fuzz/: Cargo.toml
deb822-edit/fuzz/fuzz_targets/: modify_deb822.rs  parse_deb822.rs
deb822-edit/src/: lex.rs  lib.rs  lossless.rs  parse.rs
deb822-fast/: Cargo.toml  README.md
deb822-fast/fuzz/fuzz_targets/: modify_fast.rs  parse_fast.rs
deb822-fast/src/: lib.rs
deb822-lossless/: Cargo.toml
deb822-lossless/fuzz/fuzz_targets/: modify_deb822.rs  parse_deb822.rs
deb822-lossless/src/: lossless.rs
debian-changelog/: Cargo.toml  README.md
debian-changelog/examples/: mergechangelogs.rs
debian-changelog/fuzz/: Cargo.toml
debian-changelog/fuzz/fuzz_targets/: parse_changelog.rs  parse_relaxed_changelog.rs
debian-changelog/src/: bugs.rs  lib.rs  merge.rs  parse.rs
debian-control/: Cargo.toml
debian-control/examples/: create-file.rs  incremental_parse.rs
debian-control/fuzz/fuzz_targets/: parse_control.rs  parse_lossless_control.rs  parse_relations.rs
debian-control/src/: fields.rs  lib.rs  relations.rs
debian-control/src/edit/: apt.rs  buildinfo.rs  changes.rs  control.rs  mod.rs  relations.rs
debian-control/src/lossless/: apt.rs  buildinfo.rs  control.rs  mod.rs  relations.rs
debian-control/src/lossy/: apt.rs  buildinfo.rs  control.rs  relations.rs
debian-copyright/: Cargo.toml
debian-copyright/fuzz/fuzz_targets/: parse_copyright.rs
debian-copyright/src/: edit.rs  expression.rs  glob.rs  lib.rs  lossless.rs
debian-watch/: Cargo.toml
debian-watch/fuzz/: Cargo.toml
debian-watch/fuzz/fuzz_targets/: parse_mangle.rs  parse_watch.rs  parse_watch_deb822.rs
debian-watch/src/: convert.rs  deb822.rs  linebased.rs  mangle.rs  parse.rs
debversion/: Cargo.toml  README.md
debversion/src/: vcs.rs
dep3/: Cargo.toml  README.md
dep3/fuzz/fuzz_targets/: parse_dep3.rs
dep3/src/: edit.rs  fields.rs  lib.rs  lossless.rs  lossy.rs  patchkit.rs
examples/: edit-field.rs  readonly.rs
lintian-overrides/: Cargo.toml  README.md
lintian-overrides/.github/: dependabot.yml
lintian-overrides/fuzz/: Cargo.toml
lintian-overrides/fuzz/fuzz_targets/: parse_overrides.rs
lintian-overrides/src/: lib.rs
src/: lib.rs
