[workspace]
resolver = "2"
members = ["debversion", "deb822-lossless", "deb822-derive", "deb822-fast", "debian-control", "debian-copyright", "dep3", "apt-sources", "debian-watch", "lintian-overrides", "debian-changelog"]

[workspace.package]
repository = "https://github.com/jelmer/debian-parsers"
homepage = "https://github.com/jelmer/debian-parsers"

[workspace.dependencies]
rowan = "0.16"
pyo3 = ">=0.27, <0.29"
