[package]
name = "deb822-fast"
version = "0.2.3"
edition = "2021"
repository.workspace = true
homepage.workspace = true
description = "Fast parsing of Debian control files in the deb822 format"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
categories = ["parser-implementations"]
license = "Apache-2.0"
keywords = ["debian", "deb822", "control", "rfc822"]

[dependencies]
deb822-derive = { path = "../deb822-derive", version = "^0.3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }

[features]
derive = ["dep:deb822-derive"]
stream = ["dep:futures"]

[[test]]
path = "tests/field_formatting.rs"
name = "field_formatting"
required-features = ["derive"]
