[package]
name = "debian-control"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
edition = "2021"
version = "0.3.13"
license = "Apache-2.0"
description = "A parser for Debian control files"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["debian", "deb822", "rfc822", "lossless", "edit"]
categories = ["parser-implementations"]

[dependencies]
rowan = { version = "0.16", optional = true }
debversion = ">=0.4.7, <0.6"
regex = ">=1, <2"
deb822-edit = { version = ">=0.5.16, <0.6", path = "../deb822-edit", optional = true }
deb822-fast = { path = "../deb822-fast", features = ["derive"], version = ">=0.2.0, <0.3" }
url = ">=2, <3"
pyo3 = { workspace = true, optional = true }
chrono = { version = ">=0.4, <0.5", optional = true }
serde = { version = "1", optional = true }

[features]
default = ["chrono", "edit"]
python-debian = ["dep:pyo3", "deb822-edit/python-debian"]
chrono = ["dep:chrono"]
serde = ["dep:serde"]
edit = ["dep:deb822-edit", "dep:rowan"]
lossless = ["edit"]  # Deprecated: use 'edit' feature instead

[[example]]
name = "create-file"
required-features = ["edit"]

[[example]]
name = "incremental_parse"
required-features = ["edit"]

[dev-dependencies]
serde_json = "1.0.148"

[badges]
maintenance = { status = "actively-maintained" }
