[package]
name = "debian-control"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
edition = "2021"
version = "0.3.9"
license = "Apache-2.0"
description = "A parser for Debian control files"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["debian", "deb822", "rfc822", "lossless", "edit"]
categories = ["parser-implementations"]

[dependencies]
rowan = { version = "0.16", optional = true }
debversion = ">=0.4.7, <0.6"
regex = ">=1, <2"
deb822-lossless = { version = ">=0.5.13, <0.6", path = "../deb822-lossless", optional = true }
deb822-fast = { path = "../deb822-fast", features = ["derive"], version = ">=0.2.0, <0.3" }
url = ">=2, <3"
pyo3 = { workspace = true, optional = true }
chrono = { version = ">=0.4, <0.5", optional = true }
serde = { version = "1", optional = true }

[features]
default = ["chrono", "lossless"]
python-debian = ["dep:pyo3", "deb822-lossless/python-debian"]
chrono = ["dep:chrono"]
serde = ["dep:serde"]
lossless = ["dep:deb822-lossless", "dep:rowan"]

[[example]]
name = "create-file"
required-features = ["lossless"]

[[example]]
name = "incremental_parse"
required-features = ["lossless"]

[dev-dependencies]
serde_json = "1.0.148"

[badges]
maintenance = { status = "actively-maintained" }
