[package]
name = "debian-copyright"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
edition = "2021"
license = "Apache-2.0"
description = "A parser for Debian copyright files"
repository = { workspace = true }
homepage = { workspace = true }
version = "0.1.50"
keywords = ["debian", "copyright", "edit", "dep5"]
categories = ["parser-implementations"]

[dependencies]
debversion = ">=0.4.7, <0.6"
regex = ">=1.10, <2"
deb822-edit = { version = ">=0.5.16, <0.6", path = "../deb822-edit", optional = true }
deb822-fast = { version = ">=0.1, <0.3", path = "../deb822-fast", features = ["derive"] }

[features]
default = ["lossless"]
lossless = ["dep:deb822-edit"]

[badges]
maintenance = { status = "actively-maintained" }
